--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -15,10 +15,12 @@
     font-size: 20px;
 }
 
-.icon a{
-    align-items: center;
+.icons{
+    padding-left: 27%;
+}
+.icons a{
     cursor: pointer;
-    margin: 0 1rem;
+    margin: 0 2.5rem;
 }
 
 .terms c{
