--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,9 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap');
 *{
     padding: 0;
     box-sizing: border-box;
-    font-family: "Titillium Web", sans-serif;
+    font-family: "Josefin Sans", sans-serif;
 }
 
 :root {
@@ -100,11 +100,12 @@ button:active {
 {
   background-image: linear-gradient(
     -225deg,
-    #fffb29 0%,
+    #ffffff 0%,
     #ff0000 29%,
-    #e9e9e9 67%,
+    #ff0000 67%,
     #ff1e00 100%
   );
+  font-family: Georgia, 'Times New Roman', Times, serif;
   cursor: pointer;
   background-size: auto auto;
   background-clip: border-box;
